# OpsBridge

./: .gitignore  .gitleaks.toml  CLAUDE.md  PRD-phase2.md  PRD-phase3.md  PRD.md  README.md  TEST-phase2.md  TEST-phase3.md  TEST.md  bootstrap.sh  install.sh  pyproject.toml  run-demo.py
.claude/: settings.json
deploy/: sshd_config.snippet  sudoers.snippet
src/opsbridge/: __init__.py  admin.py
src/opsbridge/agent/: __init__.py  __main__.py  core.py  logging.py  model.py  prompt_loader.py  tools.py  tui.py  widgets.py
src/opsbridge/agent/prompts/: README.md  __init__.py  system.md
tests/: conftest.py  test_admin.py  test_ask.py  test_bash_pre_exec.py  test_core_smoke.py  test_logging.py  test_model.py  test_non_tty.py  test_phase3_batch_a.py  test_phase3_batch_b.py  test_phase3_batch_c.py  test_phase3_batch_d.py  test_phase3_batch_e.py  test_phase3_batch_f.py  test_phase3_palette.py  test_prompts.py  test_search.py  test_token_budget.py  test_tools.py  test_tui.py  test_visit.py
