[project]
name = "opsbridge"
version = "0.1.0"
description = "SSH-login agent daemon — drop operators into a smolagents CodeAgent TUI instead of a shell."
readme = "PRD.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cheney Yan" }]

dependencies = [
    "smolagents>=1.14.0",
    "litellm>=1.50.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
agent = "opsbridge.agent.__main__:main"
opsbridge = "opsbridge.admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsbridge"]

[tool.hatch.build.targets.wheel.shared-data]
"deploy/sshd_config.snippet" = "share/opsbridge/sshd_config.snippet"
"deploy/sudoers.snippet" = "share/opsbridge/sudoers.snippet"
