[project]
name = "opsbridge"
version = "0.5.4"
description = "SSH-login agent daemon — drop operators into pi.dev instead of a shell."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cheney Yan" }]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
opsbridge = "opsbridge.admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsbridge"]

[tool.hatch.build.targets.wheel.shared-data]
"deploy/sshd_config.snippet" = "share/opsbridge/sshd_config.snippet"
"deploy/sudoers.snippet" = "share/opsbridge/sudoers.snippet"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
